--- a/frontend/management/src/app/modules/admin/modules/highlights/pages/create/create.page.html
+++ b/frontend/management/src/app/modules/admin/modules/highlights/pages/create/create.page.html
@@ -18,7 +18,12 @@
           <img [src]="getImageUrl(imageId)" alt="Highlight Bild" />
         </div>
       } @else {
-        <app-image-upload keepOriginalWidth [watermark]="false" [exportQuality]="1" (uploaded)="onImageUploaded($event)"></app-image-upload>
+        <app-button (click)="selectImage()">
+          <span class="icon-button">
+            <span class="material-icons">image</span>
+            <span>Bild auswählen</span>
+          </span>
+        </app-button>
       }
     </div>
   </div>
