--- a/frontend/management/src/app/modules/admin/modules/products/dialogs/edit-images/edit-images.dialog.html
+++ b/frontend/management/src/app/modules/admin/modules/products/dialogs/edit-images/edit-images.dialog.html
@@ -11,19 +11,14 @@
       </ul>
     }
   }
-  @if (imageUploadActive$ | async) {
-    <app-image-upload [multiple]="true" [desiredWidth]="1024" [watermark]="false" (uploaded)="onImagesUploaded($event)">
-    </app-image-upload>
-  } @else {
-    <div class="add-image-button-container">
-      <app-button (click)="activateImageUpload()">
-        <span class="icon-button">
-          <span class="material-icons">add</span>
-          <span>Bilder hinzufügen</span>
-        </span>
-      </app-button>
-    </div>
-  }
+  <div class="add-image-button-container">
+    <app-button (click)="selectImages()">
+      <span class="icon-button">
+        <span class="material-icons">add</span>
+        <span>Bilder hinzufügen</span>
+      </span>
+    </app-button>
+  </div>
 </div>
 
 <div class="footer">
