--- a/frontend/management/src/app/modules/admin/modules/assets/dialogs/asset-select/asset-select.dialog.scss
+++ b/frontend/management/src/app/modules/admin/modules/assets/dialogs/asset-select/asset-select.dialog.scss
@@ -18,9 +18,11 @@
   gap: 8px;
 }
 
-.upload-cancel {
+.upload-options {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .upload-toggle {
