Code review adjustments

--- a/frontend/management/src/app/modules/admin/modules/assets/pages/assets/assets.page.html
+++ b/frontend/management/src/app/modules/admin/modules/assets/pages/assets/assets.page.html
@@ -14,7 +14,18 @@
 
 @if (uploadActive$ | async) {
   <div class="upload-area">
-    <app-image-upload [multiple]="true" (uploaded)="onImagesUploaded($event)"></app-image-upload>
+    <app-image-upload
+      [multiple]="true"
+      [watermark]="watermark$ | async"
+      (uploaded)="onImagesUploaded($event)">
+    </app-image-upload>
+    <div class="upload-options">
+      <app-checkbox
+        label="Wasserzeichen hinzufügen"
+        [checked]="watermark$ | async"
+        (checkedChanges)="onWatermarkChanged($event)">
+      </app-checkbox>
+    </div>
   </div>
 }
 
