--- a/frontend/management/src/app/modules/admin/modules/assets/dialogs/asset-select/asset-select.dialog.scss
+++ b/frontend/management/src/app/modules/admin/modules/assets/dialogs/asset-select/asset-select.dialog.scss
@@ -1,8 +1,7 @@
 :host {
   display: block;
-  width: 100%;
-  max-width: 700px;
-  height: 600px;
+  width: 900px;
+  height: 80vh;
 }
 
 .content {
@@ -11,6 +10,8 @@
   height: calc(100% - 65px);
   padding: 16px;
   gap: 12px;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .upload-area {
@@ -48,11 +49,16 @@
 @media only screen and (max-width: 1000px) {
   :host {
     width: auto;
-    height: auto;
+    height: 100%;
+  }
+
+  .content {
+    padding: 8px;
   }
 
   .footer {
     flex-direction: column;
     align-items: stretch;
+    padding: 8px;
   }
 }
