--- a/frontend/management/src/app/modules/shared/modules/dialog/components/dialog/dialog.component.scss
+++ b/frontend/management/src/app/modules/shared/modules/dialog/components/dialog/dialog.component.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   pointer-events: auto;
@@ -57,14 +58,20 @@
   & > .dialog-content {
     flex: 1 1 auto;
     overflow-y: auto;
+    min-height: 0;
   }
 }
 
 @media only screen and (max-width: 1000px) {
   .content-container {
-    width: 95%;
-    height: 95%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     min-width: unset;
+    max-width: none;
+    max-height: none;
+    border-radius: 0;
   }
 }
 
