--- a/frontend/management/src/app/modules/admin/modules/fabrics/pages/details/details.page.scss
+++ b/frontend/management/src/app/modules/admin/modules/fabrics/pages/details/details.page.scss
@@ -90,6 +90,41 @@ h3 {
   aspect-ratio: 1;
 }
 
+.example-images-section {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.example-images-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.example-images-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 12px;
+}
+
+.example-image-container {
+  border-radius: 12px;
+  overflow: hidden;
+  aspect-ratio: 1;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.no-example-images {
+  font-size: 14px;
+  color: rgba(var(--text-rgb), 0.5);
+}
+
 .color-dropdown-item {
   display: flex;
   align-items: center;
